# solana-transferring-sol

./: .gitignore  package-lock.json  package.json
scripts/: cicd.sh
src/accounts/: user1.json  user2.json  user3.json  user4.json
src/client/: main.ts  util.ts
src/programs/transfer/: Cargo.toml
src/programs/transfer/src/: lib.rs
