[package]
name = "transfer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "0.9.3"
borsh-derive = "0.9.3"
solana-program = "1.11.4"

[dev-dependencies]
solana-program-test = "1.11.4"
solana-sdk = "1.11.4"

[lib]
crate-type = ["cdylib", "lib"]


